Feat: SwaggerConfig 수정